SERVER-21545 Correctly roll back updating collection options